--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 KEY_SECRET="YOU_TOKEN_KEY"
-DB_CONNECTION="YOU_DB_ADDREES"
+DB_CONNECTION="DB_CONNECTION="mongodb://localhost:27017/< name server or name database >"
 PORT=YOU_PORT
