--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.js --exec babel-node",
-    "build": "babel src --our-dir dist"
+    "build": "babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
