[FIX] saved user in db and token created

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-KEY_SECRET="YOU_TOKEN_KEY"
+KEY_SECRET="YOU_KEY_SECRET"
+TOKEN_SECRET="YOU_TOKEN_SECRET"
 DB_CONNECTION="DB_CONNECTION="mongodb://localhost:27017/< name server or name database >"
 PORT=YOU_PORT
